cabal-version:      3.4
name:               toro
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Li-yao Xia
maintainer:         lysxia@gmail.com
-- copyright:
category:           Control
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      Toro.BluefinOverEffectful
      Toro.EffectfulOverBluefin
      Toro.BluefinExtras
      Toro.BluefinCont
      Toro.BluefinHandler
      Toro.BluefinLib
    build-depends:
      bluefin,
      bluefin-internal,
      effectful-core,
      base >=4.19
    hs-source-dirs:   src
    default-language: Haskell2010
